--- a/jsonl_viewer/templates/jsonl_viewer/imprint.html
+++ b/jsonl_viewer/templates/jsonl_viewer/imprint.html
@@ -3,24 +3,102 @@
 {% block content %}
 <div class="container">
     <h1>Imprint</h1>
-    <h2>Legal Notice</h2>
-    <p>This website is operated by:</p>
-    <address>
-        microbe.cards<br>
-        [Your Name or Company Name]<br>
-        [Street Address]<br>
-        [City, State/Province, Postal Code]<br>
-        [Country]
-    </address>
-    
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:info@microbe.cards">info@microbe.cards</a></p>
-    <p>Phone: [Your Phone Number]</p>
-    
-    <h2>Responsible for Content</h2>
-    <p>[Your Name or Responsible Person's Name]</p>
-    
-    <h2>Disclaimer</h2>
-    <p>The information provided on this website is for general informational purposes only. While we strive to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose.</p>
+
+    <p>
+        <b>Publisher:</b><br>
+        Helmholtz-Zentrum für Infektionsforschung GmbH (Helmholtz Centre for Infection Research)<br>
+        Inhoffenstraße 7 | 38124 Braunschweig<br>
+        Telefon: 0531 6181-0<br>
+        Telefax: 0531 6181-2655<br>
+        E-Mail: info@helmholtz-hzi.de<br>
+        Internet: <a href="http://www.helmholtz-hzi.de/" class="download">http://www.helmholtz-hzi.de/</a><br>
+    </p>
+    <p>
+        <b>Legal Form:</b><br>
+        The Helmholtz Centre for Infection Research is a Gesellschaft mit beschränkter Haftung (GmbH), which is similar to a limited liability company.<br>
+        Commercial Register Braunschweig, Germany<br>
+        Registration Number: HRB 477<br>
+        Register court: Amtsgericht Braunschweig<br>
+    </p>
+    <p>
+        <b>Persons authorised to represent:</b><br>
+        Prof Dr Dr h. c. Dirk Heinz, Executive director<br>
+        Christian Scherf, Administrative Director<br>
+        (address like above)<br>
+    </p>
+    <p>
+        <b>Supervisory Board:</b><br>
+        <li>MinDir'in Prof. Dr. Veronika von Messling, <a href="https://www.bmbf.de/" title="Bundesministerium für Bildung und Forschung" target="_blank" class="download">Bundesministerium für Bildung und Forschung</a> (Vorsitzende)</li>
+        <li>Ministerialdirigent Rüdiger Eichel, <a href="http://www.mwk.niedersachsen.de/portal/live.php?navigation_id=6250&amp;_psmand=19" title="Niedersächsisches Ministerium für Wissenschaft und Kultur" target="_blank" class="download">Niedersächsisches Ministerium für Wissenschaft und Kultur</a>&nbsp;(stellv. Vorsitzender)</li>
+        <li>Dr. Irene Keinhorst, <a href="https://www.bundesgesundheitsministerium.de/" title="Bundesministerium für Gesundheit" target="_blank" class="download">Bundesministerium für Gesundheit</a></li>
+        <li>Dr. Jens Rosenbaum, <a href="https://www.saarland.de/mwide/DE/home/home_node.html" title="Ministerium für Wirtschaft, Innovation, Digitales und Energie" target="_blank" class="download">Saarland -&nbsp;Ministerium für Wirtschaft, Innovation, Digitales und Energie</a></li>
+        <li>Frau Ministerialrätin Astrid Lagall, <a href="https://www.stmwi.bayern.de/" title="Bayrisches Staatsministerium" target="_blank" class="download">Bayrisches Staatsministerium für Wirtschaft, Landesentwicklung und Energie</a></li>
+        <li>Prof. Dr. med. Michael Manns, <a href="http://www.mh-hannover.de/" title="MHH" target="_blank" class="download">Medizinische Hochschule Hannover</a></li>
+        <li>Prof. Dr. Christoph Dehio,&nbsp;<a href="https://www.unibas.ch/de" title="Uni Basel" target="_blank" class="download">Universität Basel</a></li>
+        <li>Prof. Dr. med. Simone Scheithauer, <a href="https://www.uni-goettingen.de/" title="Uni Göttingen" target="_blank" class="download">Georg-August-Universität Göttingen</a></li>
+        <li>Dr. Gerd Maass, <a href="https://www.roche.de" title="Opens external link in a new window" target="_blank" class="download">Roche Diagnostics GmbH</a></li>
+        <li>Prof. Dr. Luka Cicin-Sain,&nbsp;<a href="https://www.helmholtz-hzi.de/" title="HZI" target="_blank" class="download">Helmholtz-Zentrum für Infektionsforschung</a></li>
+        <li>Prof. Dr. Mark Brönstrup, <a href="https://www.helmholtz-hzi.de/" title="HZI" target="_blank" class="download">Helmholtz-Zentrum für Infektionsforschung</a></li>
+        <li>Prof. Dr. Percy A. Knolle, <a href="https://www.ukgm.de/ugm_2/deu/home.html" title="TU München" target="_blank" class="download">Technische Universität München</a></li>
+        <li>Prof. Dr. Susanne Herold, <a href="https://www.ukgm.de/ugm_2/deu/home.html" title="Universitätsklinikum Gießen und Marburg" target="_blank" class="download">Universtätsklinikum Gießen und Marburg</a></li>
+    </p>
+    <p>
+        <b>Value Added Tax Identification Number (according to § 27 a UStG):</b><br>
+        DE 114815244<br>
+    </p>
+    <p>
+        <b>Responsible for site content:</b><br>
+        Responsible for journalistic-editorial contents in the sense of § 55 II RStV:<br>
+        Helmholtz-Zentrum für Infektionsforschung GmbH (Helmholtz Centre for Infection Research)<br>
+        Prof Dr Alice McHardy (Leader of the Computational Biology of Infection Research department)<br>
+        Inhoffentraße 7<br>
+        D-38124 Braunschweig<br>
+        Telefon: 0531 6181- 0<br>
+        Telefax: 0531 6181- 0<br>
+    </p>
+    <p>
+        <b>Corporate Governance</b><br>
+        The Helmholtz Centre for Infection Research GmbH submits to the "Public Corporate Governance Code (PCGC)" of the federal government according to the memorandum of association. The Code recommends that the management and the supervisory board reports on the Company's corporate governance (Corporate Governance Report) on an annual basis.
+        The report refers to the PCGK as constituted on 30th of June 2009. Management and Supervisory Board declare that the recommendations of the Code are being complied essentially and will, deviations are explained in the respective report.
+        The Management Board and Supervisory Board declare that the Federal Public Corporate Governance Code as amended on 30 June 2009 has been complied with with reasonable deviations from the prescribed recommendations.<br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2011.pdf" class="download">PCGK-Bericht 2011</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2012.pdf" class="download">PCGK-Bericht 2012&nbsp;</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2013.pdf" class="download">PCGK-Bericht 2013&nbsp;</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2014.pdf" class="download">PCGK-Bericht 2014</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2015.pdf" class="download">PCGK-Bericht 2015&nbsp;</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2016.pdf" class="download">PCGK-Bericht 2016</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2017.pdf" class="download">PCGK-Bericht 2017</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2018.pdf" title="Opens internal link in current window" class="download" target="_blank">PCGK-Bericht 2018</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/Bericht_zum_Public_Corporate_Governance_Kodex_2019.pdf" title="Initiates file download" class="download" target="_blank">PCGK-Bericht 2019</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/AR93_TOP_13_b_Anlage_Bericht_zum_Public_Corporate_Governance_Kodex_2020.pdf" title="Initiates file download" class="download" target="_blank">PCGK-Bericht 2020</a><br>
+        <a href="https://www.helmholtz-hzi.de/fileadmin/user_upload/Service/Impressum/AR96_TOP_12_b_Anlage_Bericht_zum_Public_Corporate_Governance_Kodex_2021.pdf" title="Initiates file download" class="download" target="_blank">PCGK-Bericht 2021</a>
+    </p>
+    <p>
+        <b>Copyright</b><br>
+        The content of all web pages of this Internet presence is protected by copyright. All images and photos on the HZI web pages may not be copied, reproduced and distributed without the permission of the HZI, unless such action is permitted by law. Modification of the metadata (IPTC data including naming of author, source, copyright notice and terms of use) of the images is not permitted.
+        Images under a Creative Commons License may be used according to the license used.<br>
+        The use of images and photographs not under a Creative Commons License is permitted in the following cases, provided the HZI is cited For editorial-journalistic publications in press and other media about the work of the HZI, for other non-commercial purposes (education, personal information). Commercial use must be requested from the HZI in advance.
+    </p>
+    <p>
+        <b>Disclaimer:</b><br>
+        The Helmholtz Centre for Infection Research does not take any responsibility for damages that occur in connection with any use of this website. The content of this website gets reviewed and updated on a regular basis if possible, a guarantee for correctness of any content can't be given in any case though.
+    </p>
+    <p>
+        <b>Information:</b><br>
+        We do not take any liability for any content of any external sites we link to. The content of external sites belongs to the sphere of responsibility of it's respective publishers.
+        The data in this imprint is exclusively intended for getting in contact with us regarding content and legal issues. Any use of this data for advertisement is strictly prohibited.
+    </p>
+    <p>
+        <b>Implementation Partner:</b><br>
+        Conception, design and technical implementation realised by
+        <a href="https://www.helmholtz-hzi.de/en/research/research-topics/bacterial-and-viral-pathogens/computational-biology-of-infection-research/alice-mchardy/" title="Initiates file download" class="download">Computational Biology of Infection Research, Hemholtz Centre for Infection Research</a>
+    </p>
+    <p>
+        <b>Privacy</b><br>
+        Dear visitors to our website,<br>
+        for you to feel safe and comfortable on our website, we would like to inform you how we handle your data.
+        <a href="/dataprotection.html" title="Initiates file download" class="download">Here you will find the privacy policy.</a>
+    </p>
+    <!-- Added content ends here -->
 </div>
 {% endblock %}
